--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,16 @@
   --second-color: #f8f8f8;
   --gainsboro: gainsboro;
   --extra-color-orange: #FE7A15;
-  --extra-color-orange-bg: rgba(254, 122, 21,0.6);
   --black: #1a1e24;
   --drop-shadow: drop-shadow(0 0 0.1rem var(--gainsboro));
-  --drop-shadow2: drop-shadow(0 0 0.1rem var(--extra-color-orange));
+ 
 }
 
 html,
 body {
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
-  background-color: var(--second-color);
-  background: var(--second-color);
+  background: var(--primary-color);
   padding: 0;
   margin: 0;
 }
@@ -48,6 +46,10 @@ button {
 
 }
 
+.swal2-popup {
+  font-size: 10px !important;
+}
+
 .root-layout {
   width: 100%;
   height: 100%;
@@ -60,7 +62,7 @@ button {
     "main"
     "footer"
   ;
-  background: var(--second-color);
+  background: var(--primary-color);
 }
 
 nav {
@@ -170,33 +172,19 @@ main {
   margin: 0;
   width: 100%;
   max-width: 720px;
-  height: auto;
+  height: 480px;
   min-width: 320px;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-background: var(--primary-color);
-}
-.banner-sec-one,
-.banner-sec-two{
- width: 95%;
- height: 100%;
- display: flex;
- align-items: center;
- justify-content: center;
  
-
+background: var(--primary-color);
 }
 
 .banner-img {
- 
   min-width: 300px;
   width: 100%;
   height: 100%;
-  max-width: 180px;
-
-  object-fit: cover;
   text-justify: justify;
 }
 
@@ -247,12 +235,11 @@ background: var(--primary-color);
   max-height: 320px;
   background: var(--primary-color);
   border-radius: 10px;
-
-}
-
-.home-card:hover {
   filter: var(--drop-shadow);
+
 }
+
+
 
 .home-Link {
   height: 100%;
@@ -329,12 +316,10 @@ background: var(--primary-color);
   grid-template-rows: 1fr 50px 50px;
   background: var(--primary-color);
   border-radius: 10px;
-
-}
-
-.products-card:hover {
   filter: var(--drop-shadow);
+
 }
+
 
 .products-card-head {
   display: flex;
@@ -462,6 +447,10 @@ background: var(--primary-color);
 .filter-img {
   width: 70px;
   height: 70px;
+  border-radius: 100%;
+  object-fit: cover;
+
+ 
 }
 
 .filter-card-btn:hover .filter-img {
@@ -530,6 +519,7 @@ background: var(--primary-color);
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 35px 1fr 25px;
   background: var(--primary-color);
+  filter: var(--drop-shadow);
 }
 
 
@@ -548,7 +538,6 @@ background: var(--primary-color);
 }
 
 .cart-card-sec-two {
-
   grid-area: two;
   width: 100%;
   height: 100%;
@@ -632,7 +621,7 @@ background: var(--primary-color);
   flex-direction: row;
   border-radius: 10px;
 
-
+  filter: var(--drop-shadow);
 }
 
 .checkout-sec-one h3 {
@@ -645,10 +634,16 @@ background: var(--primary-color);
   border: none;
   border-radius: 5px;
   padding: 10px;
-  color: var(--primary-color);
   cursor: pointer;
 }
 
+
+.pop-up{
+  position: absolute;
+  width: 200px;
+  height: 35px;
+  background: green;
+}
 @media only screen and (min-width: 40em) {
   .home-container ul {
     grid-template-columns: repeat(2, 1fr);
